--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="div-img">
-    <img src="/assests/img/sign-up.jpg" alt="Nature" style="width: 100% ;height: 100%;">
+    <img src="/assets/img/sign-up.jpg" alt="Nature" style="width: 100% ;height: 100%;">
     <div class="text-block">
       <form onsubmit="register();return false;" id="signupForm" method="POST">
         <h1 class="text-center heading">Register</h1>
@@ -33,7 +33,7 @@
           <input class="form-control" type="text" id="number">
         </div>
         <div class="form-group form-check">
-         <h6>Already User <a href="/assests/login/login.html">Login?</a> </h6>
+         <h6>Already User <a href="/assets/login/login.html">Login?</a> </h6>
         </div>
         <div class="text-center">
           <button type="submit" class="btn btn-primary">Sign-up</button>
@@ -46,7 +46,7 @@
 
 
 
-  <script src="/assests/script.js"></script>
+  <script src="/assets/script.js"></script>
 </body>
 
 </html>
