--- a/assets/welcome/welcome.html
+++ b/assets/welcome/welcome.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark  bg-dark">
         <a class="navbar-brand" href="https://github.com/kavinsurya" target="_blank">
-            <img src="/assests/img/logo.png" width="30" height="30" class="d-inline-block align-top " alt=""
+            <img src="/assets/img/logo.png" width="30" height="30" class="d-inline-block align-top " alt=""
                 loading="lazy"> Kavin
 
         </a>
