--- a/assets/reset/passwordreset.html
+++ b/assets/reset/passwordreset.html
@@ -56,7 +56,7 @@
                                 <input type="button" value="Reset Password" class="btn btn-info" id="reset" onclick="changepassword()">
                             </div>
                         </div>
-                        <label><a href="/assests/login/login.html">Back to Login</a> </label>
+                        <label><a href="/assets/login/login.html">Back to Login</a> </label>
                     </fieldset>
                 </form>
 
